@@ -12,12 +12,14 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -28,23 +30,64 @@ import java.util.concurrent.Executors;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class TMDbApiManager {
     private static final String BASE_URL = "https://api.themoviedb.org/3";
     private static final String API_KEY = "";
-    private static final String LANGUAGE = "en-US";
+    private static final String LANGUAGE = "en-US"; // Default language
     private static final String IMAGE_BASE_URL = "https://image.tmdb.org/t/p/";
     private static final String DEFAULT_IMAGE_SIZE = "w500";
+    private static final String BACKDROP_IMAGE_SIZE_DETAILS = "w1280"; // For film scene background
+    private static final String STILL_IMAGE_SIZE = "w300"; // For episode stills
+
 
     private static volatile TMDbApiManager instance;
     private final OkHttpClient client;
-
     private final ExecutorService executor;
-    private ContentDao contentDao;
+    private ContentDao contentDao; // Keep ContentDao, but handle its potential nullness
     private final ContentCacheManager cacheManager;
 
     public enum ContentType {
-        MOVIE, TV
+        MOVIE, TV, UNKNOWN
+    }
+
+    // Helper classes for TV Season/Episode details from TMDb API
+    public static class ApiSeasonDetails {
+        public int seasonNumber;
+        public String name;
+        public String overview;
+        public String posterPath; // Relative path
+        public List<ApiEpisodeDetails> episodes;
+        public String airDate;
+        public int id; // TMDb season ID
+
+        public ApiSeasonDetails() {
+            episodes = new ArrayList<>();
+        }
+
+        // Convenience method to get full poster URL
+        public String getFullPosterUrl(String size) {
+            // Use the instance to get the image URL, handling potential null path
+            return TMDbApiManager.getInstance().getImageUrl(posterPath, size);
+        }
+    }
+
+    public static class ApiEpisodeDetails {
+        public int episodeNumber;
+        public String name;
+        public String overview;
+        public String stillPath; // Relative path
+        public int runtime; // in minutes
+        public String airDate;
+        public double voteAverage;
+        public int id; // TMDb episode ID
+
+        // Convenience method to get full still URL
+        public String getFullStillUrl(String size) {
+            // Use the instance to get the image URL, handling potential null path
+            return TMDbApiManager.getInstance().getImageUrl(stillPath, size);
+        }
     }
 
 
@@ -52,12 +95,19 @@ public class TMDbApiManager {
         this.client = new OkHttpClient.Builder()
                 .addInterceptor(new AuthInterceptor())
                 .build();
-        this.executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+        // Using a fixed thread pool for API calls is generally better than cached
+        // to prevent unbounded thread creation under heavy load. Adjust size as needed.
+        this.executor = Executors.newFixedThreadPool(10);
         this.cacheManager = ContentCacheManager.getInstance();
     }
 
-
     public static TMDbApiManager getInstance() {
+        if (API_KEY == null || API_KEY.trim().isEmpty()) {
+            // Log a severe error or throw an exception immediately if key is missing
+            System.err.println("FATAL ERROR: TMDb API Key is not set in TMDbApiManager.java. API calls will fail.");
+            // Consider throwing an exception here if the app cannot function without the key
+            // throw new IllegalStateException("TMDb API Key is not set.");
+        }
         if (instance == null) {
             synchronized (TMDbApiManager.class) {
                 if (instance == null) {
@@ -68,7 +118,10 @@ public class TMDbApiManager {
         return instance;
     }
 
-    // Setter for ContentDao dependency injection
+    public ExecutorService getExecutor() {
+        return executor;
+    }
+
     public void setContentDao(ContentDao contentDao) {
         this.contentDao = contentDao;
     }
@@ -79,18 +132,27 @@ public class TMDbApiManager {
         public Response intercept(Chain chain) throws IOException {
             Request original = chain.request();
             HttpUrl originalHttpUrl = original.url();
-
-            HttpUrl url = originalHttpUrl.newBuilder()
-                    // Authorization header is now preferred for the API key by TMDb
-                    // .addQueryParameter("api_key", API_KEY) // Deprecated way
-                    .build();
-
+            HttpUrl url = originalHttpUrl.newBuilder().build(); // No need to add API key as query param with Bearer token
             Request.Builder requestBuilder = original.newBuilder()
                     .url(url)
                     .header("accept", "application/json")
-                    .header("Authorization", "Bearer " + API_KEY); // Correct way
+                    // Use the Bearer token method which is preferred by TMDb v3/v4
+                    .header("Authorization", "Bearer " + API_KEY);
 
             Request request = requestBuilder.build();
+
+            // Check if API_KEY is set before proceeding
+            if (API_KEY == null || API_KEY.trim().isEmpty()) {
+                // Or return a specific error response if you don't throw in getInstance
+                return new Response.Builder()
+                        .request(request)
+                        .protocol(Protocol.HTTP_1_1)
+                        .code(500) // Internal Server Error
+                        .message("API Key Not Set")
+                        .body(ResponseBody.create("{\"status_code\":500,\"status_message\":\"TMDb API Key is not set.\"}", MediaType.get("application/json")))
+                        .build();
+            }
+
             return chain.proceed(request);
         }
     }
@@ -98,19 +160,16 @@ public class TMDbApiManager {
     private Request buildRequest(String endpointPathAndQuery) {
         HttpUrl parsedUrl = HttpUrl.parse(BASE_URL + endpointPathAndQuery);
         if (parsedUrl == null) {
+            // Log the malformed URL and throw
+            System.err.println("TMDbApiManager: Malformed URL attempted: " + BASE_URL + endpointPathAndQuery);
             throw new IllegalArgumentException("Malformed URL for endpoint: " + endpointPathAndQuery);
         }
-
         HttpUrl.Builder urlBuilder = parsedUrl.newBuilder();
-        if (parsedUrl.queryParameter("language") == null) {
+        // Add language parameter unless it's an image URL or already present
+        if (!endpointPathAndQuery.startsWith("/t/p/") && parsedUrl.queryParameter("language") == null) {
             urlBuilder.addQueryParameter("language", LANGUAGE);
         }
-        // API key is added by AuthInterceptor via header
-
-        return new Request.Builder()
-                .url(urlBuilder.build())
-                .get()
-                .build();
+        return new Request.Builder().url(urlBuilder.build()).get().build();
     }
 
     public String makeRequest(String endpoint) throws IOException {
@@ -119,9 +178,11 @@ public class TMDbApiManager {
             if (!response.isSuccessful()) {
                 ResponseBody errorBody = response.body();
                 String errorDetails = errorBody != null ? errorBody.string() : "No error body";
+                // Log the full request URL for debugging
                 System.err.println("TMDbApiManager: Request URL: " + request.url());
                 System.err.println("TMDbApiManager: Response Code: " + response.code());
                 System.err.println("TMDbApiManager: Error Details: " + errorDetails);
+                // Include the URL in the exception message
                 throw new IOException("Unexpected response code: " + response.code() + " for URL: " + request.url() + ". Details: " + errorDetails);
             }
             ResponseBody body = response.body();
@@ -130,26 +191,24 @@ public class TMDbApiManager {
     }
 
     public CompletableFuture<String> makeRequestAsync(String endpoint) {
+        // Use handle to process both success and failure, then propagate failure
         return CompletableFuture.supplyAsync(() -> {
             try {
                 return makeRequest(endpoint);
             } catch (IOException e) {
-                // Log the error with more details
-                System.err.println("TMDbApiManager: API request failed for endpoint: " + endpoint + ". Error: " + e.getMessage());
+                // Wrap the IOException in a RuntimeException or a custom exception
+                // to allow CompletableFuture's exceptionally/handle to catch it.
                 throw new RuntimeException("API request failed for endpoint: " + endpoint, e);
             }
         }, executor);
     }
 
-    // fetchAsMoviestarContentList remains largely the same, but ensure it maps fields correctly
-    // to your Content model, especially if you've added/changed fields.
-    // The default Film_Url is now handled by the database schema or ContentDao.insertContents.
-    public CompletableFuture<List<Content>> fetchAsMoviestarContentList(String endpoint, ContentType expectedType) {
+    public CompletableFuture<List<Content>> fetchAsMoviestarContentList(String endpoint, @Nullable ContentType expectedType) {
         return makeRequestAsync(endpoint).thenApplyAsync(responseString -> {
             List<Content> contentList = new ArrayList<>();
             if (responseString == null || responseString.isEmpty()) {
-                System.err.println("TMDbApiManager: Empty response for endpoint: " + endpoint);
-                return contentList;
+                System.err.println("TMDbApiManager: Empty or null response for endpoint: " + endpoint);
+                return contentList; // Return empty list on empty response
             }
             try {
                 JsonObject jsonResponse = JsonParser.parseString(responseString).getAsJsonObject();
@@ -158,89 +217,121 @@ public class TMDbApiManager {
                 if (resultsArray != null) {
                     for (JsonElement element : resultsArray) {
                         if (element.isJsonObject()) {
-                            JsonObject TMDbObjectJson = element.getAsJsonObject();
-                            int id = TMDbObjectJson.has( "id") ? TMDbObjectJson.get("id").getAsInt() : 0;
+                            JsonObject tmdbObjectJson = element.getAsJsonObject();
+                            // Basic validation: must have an ID
+                            if (!tmdbObjectJson.has("id") || tmdbObjectJson.get("id").isJsonNull()) {
+                                System.err.println("TMDbApiManager: Skipping content item with no ID in response from " + endpoint);
+                                continue;
+                            }
+                            int id = tmdbObjectJson.get("id").getAsInt();
 
-                            if ( id == 0) continue;
+                            ContentType currentItemType = expectedType;
+                            if (expectedType == ContentType.UNKNOWN) {
+                                String mediaTypeStr = getStringOrNull(tmdbObjectJson, "media_type");
+                                if ("movie".equalsIgnoreCase(mediaTypeStr)) currentItemType = ContentType.MOVIE;
+                                else if ("tv".equalsIgnoreCase(mediaTypeStr)) currentItemType = ContentType.TV;
+                                else {
+                                    // Log unknown media types
+                                    System.err.println("TMDbApiManager: Skipping content item with unknown media_type '" + mediaTypeStr + "' for ID " + id + " from " + endpoint);
+                                    continue; // Skip items with unknown media type
+                                }
+                            }
+                            if (currentItemType == null) {
+                                System.err.println("TMDbApiManager: Skipping content item with null determined type for ID " + id + " from " + endpoint);
+                                continue;
+                            }
 
                             Content content = cacheManager.get(id);
-                            boolean isNewInCache  = false;
                             if (content == null) {
                                 content = new Content();
-                                content.setId(id );
+                                content.setId(id);
+                                // Populate basic fields from the list result
+                                content.setPlot(getStringOrNull(tmdbObjectJson, "overview"));
+                                content.setRating(tmdbObjectJson.has("vote_average") && !tmdbObjectJson.get("vote_average").isJsonNull() ? tmdbObjectJson.get("vote_average").getAsDouble() : 0.0);
+                                content.setPopularity(tmdbObjectJson.has("popularity") && !tmdbObjectJson.get("popularity").isJsonNull() ? (int) tmdbObjectJson.get("popularity").getAsDouble() : 0);
 
-                                isNewInCache = true;
-                            }
+                                String posterPath = getStringOrNull(tmdbObjectJson, "poster_path");
+                                String backdropPath = getStringOrNull(tmdbObjectJson, "backdrop_path");
+                                // Use DEFAULT_IMAGE_SIZE for list items
+                                content.setImageUrl(getImageUrl(backdropPath, DEFAULT_IMAGE_SIZE));
+                                content.setPosterUrl(getImageUrl(posterPath, DEFAULT_IMAGE_SIZE));
 
-                            // Populate or update fields from API data
-                            content.setPlot(getStringOrNull(TMDbObjectJson, "overview"));
-                            content.setRating(TMDbObjectJson.has("vote_average") ? TMDbObjectJson.get("vote_average").getAsDouble() : 0.0);
-                            content.setPopularity(TMDbObjectJson.has("popularity") ? (int) TMDbObjectJson.get("popularity").getAsDouble() : 0);
+                                String releaseDateStr = null;
+                                String title = null;
+                                String originalTitle = null;
 
-                            String posterPath = getStringOrNull(TMDbObjectJson, "poster_path" );
-                            String backdropPath = getStringOrNull(TMDbObjectJson, "backdrop_path");
-                            content.setImageUrl(getImageUrl(backdropPath, DEFAULT_IMAGE_SIZE));
-                            content.setPosterUrl(getImageUrl(posterPath, DEFAULT_IMAGE_SIZE));
-
-                            String releaseDateStr = null;
-                            if (expectedType == ContentType.MOVIE) {
-                                content.setTitle(getStringOrNull(TMDbObjectJson, "title"));
-                                releaseDateStr = getStringOrNull(TMDbObjectJson, "release_date");
-                                content.Series(false);
-                            } else if (expectedType == ContentType.TV) {
-                                content.setTitle(getStringOrNull(TMDbObjectJson, "name"));
-                                releaseDateStr = getStringOrNull(TMDbObjectJson, "first_air_date");
-                                content.Series(true);
-                            }
-
-                            content.setReleaseDate(releaseDateStr);
-                            if (releaseDateStr != null && !releaseDateStr.isEmpty()) {
-                                try {
-                                    LocalDate date = LocalDate.parse(releaseDateStr, DateTimeFormatter.ISO_LOCAL_DATE);
-                                    content.setYear(date.getYear());
-                                } catch (DateTimeParseException e) {
-                                    System.err.println("TMDbApiManager: Could not parse year from date: " + releaseDateStr + " for " + content.getTitle());
-                                    content.setYear(0); // Default year if parsing fails
+                                switch (currentItemType) {
+                                    case MOVIE:
+                                        title = getStringOrNull(tmdbObjectJson, "title");
+                                        originalTitle = getStringOrNull(tmdbObjectJson, "original_title");
+                                        releaseDateStr = getStringOrNull(tmdbObjectJson, "release_date");
+                                        content.setIsSeries(false);
+                                        break;
+                                    case TV:
+                                        title = getStringOrNull(tmdbObjectJson, "name");
+                                        originalTitle = getStringOrNull(tmdbObjectJson, "original_name");
+                                        releaseDateStr = getStringOrNull(tmdbObjectJson, "first_air_date");
+                                        content.setIsSeries(true);
+                                        break;
                                 }
-                            } else {
-                                content.setYear(0); // Default year if no release date
-                            }
+                                content.setTitle(title);
+                                content.setOriginalTitle(originalTitle);
+                                content.setReleaseDate(releaseDateStr);
 
-                            if (TMDbObjectJson.has("genre_ids") && TMDbObjectJson.get("genre_ids").isJsonArray()) {
-                                JsonArray genreIdsArray = TMDbObjectJson.getAsJsonArray("genre_ids");
-                                List<Integer> categoryIds = new ArrayList<>();
-                                for (JsonElement genreIdElement : genreIdsArray) {
-                                    categoryIds.add(genreIdElement.getAsInt());
+                                if (releaseDateStr != null && !releaseDateStr.isEmpty()) {
+                                    try {
+                                        // Use a more flexible date parser if needed, but ISO_LOCAL_DATE is common
+                                        LocalDate date = LocalDate.parse(releaseDateStr, DateTimeFormatter.ISO_LOCAL_DATE);
+                                        content.setYear(date.getYear());
+                                    } catch (DateTimeParseException e) {
+                                        System.err.println("TMDbApiManager: Failed to parse date '" + releaseDateStr + "' for content ID " + id + ": " + e.getMessage());
+                                        content.setYear(0); // Set year to 0 on parse failure
+                                    }
+                                } else { content.setYear(0); }
+
+                                if (tmdbObjectJson.has("genre_ids") && tmdbObjectJson.get("genre_ids").isJsonArray()) {
+                                    JsonArray genreIdsArray = tmdbObjectJson.getAsJsonArray("genre_ids");
+                                    List<Integer> categoryIds = new ArrayList<>();
+                                    for (JsonElement genreIdElement : genreIdsArray) {
+                                        if (genreIdElement.isJsonPrimitive() && genreIdElement.getAsJsonPrimitive().isNumber()) {
+                                            categoryIds.add(genreIdElement.getAsInt());
+                                        }
+                                    }
+                                    content.setCategories(categoryIds);
                                 }
-                                content.setCategories(categoryIds); // Overwrites existing categories from API
+                                // Video URL is typically fetched with full details, not list results
+                                // content.setVideoUrl("http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerFun.mp4"); // Default placeholder
+
+                                cacheManager.put(content); // Cache the partially populated content
                             }
-
-                            if (isNewInCache) {
-                                content.setVideoUrl("http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerFun.mp4"); ///////////////////////////////////////////////// Default video URL
-                            }
-
-                            if (isNewInCache)
-                                cacheManager.put(content);
-
                             contentList.add(content);
                         }
                     }
                 }
             } catch (Exception e) {
-                System.err.println("TMDbApiManager: Failed to parse/map content from JSON for: " + endpoint + ". Error: " + e.getMessage() + ". Response: " + responseString.substring(0, Math.min(responseString.length(), 500)));
+                // Log the exception details including the endpoint and response snippet
+                String responseSnippet = (responseString != null && responseString.length() > 500) ? responseString.substring(0, 500) + "..." : responseString;
+                System.err.println("TMDbApiManager: Failed to parse/map content list from JSON for endpoint: " + endpoint + ". Error: " + e.getMessage() + ". Response snippet: " + responseSnippet);
+                // Do NOT re-throw here, just return the potentially empty list.
+                // The caller should handle the case of an empty list.
             }
             return contentList;
-        }, executor);
+        }, executor); // Use the API manager's executor for processing
     }
 
+
     private String getStringOrNull(JsonObject jsonObject, String memberName) {
-        if (jsonObject.has(memberName) && !jsonObject.get(memberName).isJsonNull()) {
-            return jsonObject.get(memberName).getAsString();
+        if (jsonObject != null && jsonObject.has(memberName) && !jsonObject.get(memberName).isJsonNull()) {
+            JsonElement element = jsonObject.get(memberName);
+            if (element.isJsonPrimitive() && element.getAsJsonPrimitive().isString()) {
+                return element.getAsString();
+            }
+            // Handle cases where the member exists but is not a string primitive (e.g., number, boolean, object, array)
+            System.err.println("TMDbApiManager: Expected string for member '" + memberName + "', but found " + element.getClass().getSimpleName());
         }
         return null;
     }
 
-    // --- Methods for fetching different content types ---
     public CompletableFuture<List<Content>> getTrendingMoviesAsMoviestarContent(String timeWindow) {
         return fetchAsMoviestarContentList("/trending/movie/" + timeWindow, ContentType.MOVIE);
     }
@@ -260,91 +351,87 @@ public class TMDbApiManager {
     public CompletableFuture<Void> updateAllContentInDatabase() {
         if (contentDao == null) {
             System.err.println("TMDbApiManager: ContentDao not initialized. Cannot update database.");
+            // Return a completed future, but log the error. Or return a failed future.
+            // Returning a failed future is better if the caller needs to know this failed.
             return CompletableFuture.failedFuture(new IllegalStateException("ContentDao not initialized."));
         }
 
-        // Fetching operations will now use the cache-aware fetchAsMoviestarContentList
-        CompletableFuture<List<Content>> popularMoviesFuture = getPopularMoviesAsMoviestarContent();
-        CompletableFuture<List<Content>> trendingMoviesDayFuture = getTrendingMoviesAsMoviestarContent("day");
-        CompletableFuture<List<Content>> popularTvShowsFuture = getPopularTvShowsAsMoviestarContent();
-        CompletableFuture<List<Content>> trendingTvDayFuture = getTrendingTvShowsAsMoviestarContent("day");
-
         List<CompletableFuture<List<Content>>> futures = List.of(
-                popularMoviesFuture, trendingMoviesDayFuture,
-                popularTvShowsFuture, trendingTvDayFuture
+                getPopularMoviesAsMoviestarContent(),
+                getTrendingMoviesAsMoviestarContent("day"),
+                getPopularTvShowsAsMoviestarContent(),
+                getTrendingTvShowsAsMoviestarContent("day")
         );
 
+        // Use handle to collect results or exceptions from all futures
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenComposeAsync(voidResult -> {
-                    List<Content> allContentFromApi = new ArrayList<>();
-                    for (CompletableFuture<List<Content>> future : futures) {
-                        try {
-                            allContentFromApi.addAll(future.join());
-                        } catch (Exception e) {
-                            System.err.println("TMDbApiManager: Error joining future during content update: " + e.getMessage());
-                        }
-                    }
-
-                    List<Content> distinctContentToStore = allContentFromApi.stream()
-                            .filter(Objects::nonNull)
-                            .filter(c -> c.getId() != 0)
-                            .filter(distinctByKey(Content::getId))
+                    List<Content> allContentFromApi = futures.stream()
+                            .flatMap(future -> {
+                                try {
+                                    // Get the result. If the future completed exceptionally, join() will throw.
+                                    return future.join().stream();
+                                } catch (Exception e) {
+                                    // Log the error for this specific future but allow others to proceed
+                                    System.err.println("TMDbApiManager: Error fetching content for one category: " + e.getMessage());
+                                    return Stream.empty(); // Return empty stream for this failed category
+                                }
+                            })
+                            .filter(Objects::nonNull).filter(c -> c.getId() != 0)
+                            .filter(distinctByKey(Content::getId)) // Filter out duplicates by ID
                             .collect(Collectors.toList());
 
-                    if (!distinctContentToStore.isEmpty()) {
+                    if (!allContentFromApi.isEmpty()) {
                         try {
-                            System.out.println("TMDbApiManager: Passing " + distinctContentToStore.size() + " distinct content items (from cache/API) to DAO for DB update.");
-                            contentDao.insertContents(distinctContentToStore);
-                            System.out.println("TMDbApiManager: Database update process complete via DAO.");
+                            // Perform database insert on the executor thread pool
+                            contentDao.insertContents(allContentFromApi);
+                            return CompletableFuture.completedFuture(null); // Indicate success
                         } catch (Exception e) {
-                            System.err.println("TMDbApiManager: Error during contentDao.insertContents: " + e.getMessage());
+                            System.err.println("TMDbApiManager: Error during DAO insert: " + e.getMessage());
+                            // Return a failed future if the database operation fails
                             return CompletableFuture.failedFuture(e);
                         }
                     } else {
-                        System.out.println("TMDbApiManager: No distinct content from API to update in the database.");
+                        System.out.println("TMDbApiManager: No content fetched from API to update database.");
+                        return CompletableFuture.completedFuture(null); // Indicate success (no content to insert)
                     }
-                    return CompletableFuture.completedFuture(null);
-                }, executor);
+                }, executor); // Perform the stream processing and DAO insert on the executor
     }
 
-    // Helper for distinctByKey using a ConcurrentHashMap for thread-safety if stream is parallel (though not here)
-    private static <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor ) {
+    // Helper to filter distinct elements in a stream
+    private static <T> Predicate<T> distinctByKey(Function<? super T, ?> keyExtractor) {
         Set<Object> seen = ConcurrentHashMap.newKeySet();
         return t -> seen.add(keyExtractor.apply(t));
     }
 
-    // --- Search logic (remains, with URL encoding for query) ---
-    public CompletableFuture<List<Content>> searchMoviesAsMoviestarContent (String query) {
+    public CompletableFuture<List<Content>> searchMultiContent(String query, int page) {
+        if (query == null || query.trim().isEmpty()) {
+            return CompletableFuture.completedFuture(new ArrayList<>()); // Return empty list for empty query
+        }
         String encodedQuery;
-        encodedQuery =  URLEncoder.encode( query, StandardCharsets.UTF_8);
-        String  endpointWithQuery = "/search/movie?query=" + encodedQuery;
-        return fetchAsMoviestarContentList(endpointWithQuery, ContentType.MOVIE );
-    }
-
-    public CompletableFuture<List<Content>> searchTvShowsAsMoviestarContent(String query) {
-        String encodedQuery;
-        encodedQuery = URLEncoder.encode( query, StandardCharsets.UTF_8);
-        String endpointWithQuery = "/search/tv?query=" + encodedQuery;
-        return fetchAsMoviestarContentList(endpointWithQuery, ContentType.TV);
+        try {
+            encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8.name());
+        } catch (UnsupportedEncodingException e) {
+            System.err.println("TMDbApiManager: UTF-8 encoding error for query '" + query + "': " + e.getMessage());
+            // Return a failed future to signal the encoding error
+            return CompletableFuture.failedFuture(new RuntimeException("Failed to encode query.", e));
+        }
+        String endpointWithQuery = "/search/multi?query=" + encodedQuery + "&page=" + page + "&include_adult=false";
+        return fetchAsMoviestarContentList(endpointWithQuery, ContentType.UNKNOWN);
     }
 
     @Nullable
     public String getImageUrl(@Nullable String imagePath, String size) {
-        if (imagePath == null || imagePath.isEmpty()) {
-            return null;
+        if (imagePath == null || imagePath.trim().isEmpty() || "null".equalsIgnoreCase(imagePath.trim())) {
+            return null; // Return null if path is null, empty, or "null" string
         }
-        return IMAGE_BASE_URL + size + imagePath;
+        // Ensure size is not null or empty, use default if needed
+        String finalSize = (size != null && !size.trim().isEmpty()) ? size : DEFAULT_IMAGE_SIZE;
+        // Ensure path starts with '/'
+        String finalImagePath = imagePath.startsWith("/") ? imagePath : "/" + imagePath;
+        return IMAGE_BASE_URL + finalSize + finalImagePath;
     }
 
-
-    @Nullable
-    public String getPosterUrl(@Nullable String posterPath, String size) {
-        return getImageUrl(posterPath, size);
-    }
-
-    @Nullable
-    public String getBackdropUrl(@Nullable String backdropPath, String size) {
-        return getImageUrl(backdropPath, size);
-    }
-
+    // Add a setCast method to Content model
+    // (This requires modifying Content.java)
 }
